# zipring

./: Cargo.toml  LICENSE  README.md
benches/: http_server.rs
src/: borrowed_file.rs  fstree.rs  index.html  main.rs  rc_zip_monoio.rs  request.rs  response.rs
src/request/: mod.rs  test.rs
src/response/: mod.rs  status.rs  stream.rs  test.rs
tests/: integration.rs
tests/resources/: Universal_Declaration_of_Human_Rights.htmlz
