[package]
name = "zipring"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
const-hex = "1.15.0"
httparse = "1.10.1"
itoa = "1.0.15"
mime_guess = "2.0.5"
monoio = "0.2.4"
percent-encoding = "2.3.1"
rc-zip = { version = "5.3.1", features = ["deflate"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
winnow = "0.5.36"

[patch.crates-io]
rc-zip = { git = "https://github.com/max-te/rc-zip", rev = "a8adaea094610eeda6d0c5d24b293a8164f0ec02" }

