[package]
name = "zipring"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
const-hex = "1.15.0"
httparse = "1.10.1"
itoa = "1.0.15"
mime_guess = { version = "2.0.5", default-features = false }
monoio = { version = "0.2.4", features = ["iouring", "tracing"], default-features = false }
percent-encoding = "2.3.1"
rc-zip = { version = "5.3.1", features = ["deflate"] }
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.19", features = ["std", "fmt", "ansi"], default-features = false }
winnow = "0.5.36"
