[package]
name = "zipring"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
const-hex = "1.17.0"
const_format = "0.2.35"
httparse = "1.10.1"
itoa = "1.0.15"
mime_guess = { version = "2.0.5", default-features = false }
monoio = { version = "0.2.4", features = ["iouring", "tracing"], default-features = false }
percent-encoding = "2.3.1"
rc-zip = { version = "5.3.1", features = ["deflate"] }
tracing = { version = "0.1.44", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.19", features = ["std", "fmt", "ansi"], default-features = false }
winnow = "0.5.36"

[features]
default = ["deflate"]
deflate = ["rc-zip/deflate"]
zstd = ["rc-zip/zstd"]
deflate64 = ["rc-zip/deflate64"]
bzip2 = ["rc-zip/bzip2"]
lzma = ["rc-zip/lzma"]

[dev-dependencies]
criterion = "0.5"
assert_cmd = "2.0"
regex = "1.11"
flate2 = "1.1.8"
ureq = { version = "3.1.4", features = ["gzip"] }

[[bench]]
name = "http_server"
harness = false
